codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__recent_model_shortcut_parent_owned.snap
---
source: tui/src/chatwidget/tests/model_shortcuts_tests.rs
expression: lines_to_single_string(&drain_insert_history(&mut events).concat())
---
■ This sub-agent is controlled by its parent. Direct input is disabled.
