codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__recent_model_shortcut_usage_exhausted.snap
---
source: tui/src/chatwidget/tests/model_shortcuts_tests.rs
expression: lines_to_single_string(&drain_insert_history(&mut events).concat())
---
• Model switching is unavailable until ordinary usage recovers.
